fixed some i18next problems

--- a/i18next/i18n/translation-de.json
+++ b/i18next/i18n/translation-de.json
@@ -1,3 +1,9 @@
 {
-  "title": "Dies ist der Titel des i18n Beispiels"
+ "title": "Dies ist der Titel des i18n Beispiels",
+ "ball": "Du hast __count__ Ball.",
+  "ball_plural": "Du hast __count__ Bälle.",
+  "chooser": {
+	"ball" : "Anzahl Bälle:",
+	"lang" : "Wähle die Sprache:"
+ }
 }
